# SeanDisplayLVGL

./: platformio.ini
include/: filelist.txt  ui.h  ui_Screen1.h  ui_Screen2.h  ui_events.h  ui_img_windrose_png.c
lib/: lv_conf.h
src/: CMakeLists.txt  filelist.txt  lv_conf.h  project.info  seantempLVGL.cpp  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_events.c  ui_events.h
src/fonts/: ui_font_Font1.c  ui_font_Font10.c  ui_font_Font12.c  ui_font_Font16.c  ui_font_Font20.c  ui_font_Font24.c  ui_font_Font32.c
src/images/: ui_img_windrose_png.c
src/screens/: ui_ScreenChart.c  ui_ScreenChart.h  ui_ScreenMain.c  ui_ScreenMain.h  ui_ScreenSettings.c  ui_ScreenSettings.h  ui_ScreenWifi.c  ui_ScreenWifi.h
